--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Prepara Exercicios</title>
+    <title>Cadastro JS @Morais</title>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="banco.js"></script>
 </head>
